[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["David2261 <bulatnasirov2003@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
Django = "^4.1.1"
djangorestframework = "^3.14.0"
django-grappelli = "^3.0.3"
django-tinymce = "^3.5.0"
whitenoise = "^6.2.0"
Pillow = "^9.2.0"
pyjwt = "^2.6.0"
django-environ = "^0.10.0"
gunicorn = "^20.1.0"
django-cors-headers = "^4.1.0"
transliterate = "^1.10.2"
psycopg2-binary = "^2.9.9"
djoser = "^2.2.2"
djangorestframework-simplejwt = "^5.3.1"
django-allauth = {extras = ["socialaccount"], version = "^0.63.6"}
django-filter = "^24.3"
celery = "^5.4.0"
redis = "^5.2.0"
django-utils-six = "^2.0"
django-csp = "^4.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-django = "^4.5.2"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
flake8-django = "^1.2"
coverage = "^7.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.deptry]
known_first_party = ["hello", "articles", "authentication", "bonds", "segregation", "adminpanel"]


