[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["David2261 <bulatnasirov2003@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
Django = "^6.0"
djangorestframework = "^3.15"
django-grappelli = "^4.0"
django-tinymce = "^4.0"
whitenoise = "^6.7"
Pillow = "^11.0"
pyjwt = "^2.9"
django-environ = "^0.11"
gunicorn = "^23.0"
django-cors-headers = "^4.5"
transliterate = "^1.10"
psycopg2-binary = "^2.9"
djangorestframework-simplejwt = "^5.3"
django-allauth = { extras = ["socialaccount"], version = "^0.63" }
django-filter = "^24.3"
celery = "^5.4"
redis = "^5.1"
django-csp = "^4.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3"
pytest-django = "^4.9"
pytest-mock = "^3.14"

[tool.poetry.group.dev.dependencies]
flake8-django = "^1.2"
coverage = "^7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.deptry]
known_first_party = ["hello", "articles", "authentication", "bonds", "segregation", "adminpanel"]

[tool.pyright]
include = ["."]
exclude = ["**/__pycache__", "**/.venv", "**/.git"]
venvPath = "."
venv = ".venv"
